--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "chai": "4.2.0",
     "express": "^4.17.1",
     "mocha": "6.2.1"
+  },
+  "scripts": {
+  "test": "mocha --watch \"./{,!(node_modules|client)/**/}*.test.js\""
   }
 }
+
